// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plan should display a context menu with Pin and Remove when pinnable is passed 1`] = `
Array [
  MyMenuItem {
    "click": [Function],
    "enabled": undefined,
    "label": "Pin",
  },
  MyMenuItem {
    "click": [Function],
    "enabled": true,
    "label": "Remove",
  },
]
`;

exports[`Plan should display a context menu with Unpin and Remove when pinnable is not passed 1`] = `
Array [
  MyMenuItem {
    "click": [Function],
    "enabled": undefined,
    "label": "Un-pin",
  },
  MyMenuItem {
    "click": [Function],
    "enabled": true,
    "label": "Remove",
  },
]
`;
